# leapmux

./: .dockerignore  .gitattributes  .gitignore  .golangci.yml  .versions  CLAUDE.md  LICENSE.md  NOTICE.md  README.md  Taskfile.yaml  Taskfile.yml  buf.gen.yaml  buf.yaml  go.mod  go.sum  go.work  mprocs-desktop.yaml  mprocs-solo.yaml  mprocs.yaml  versions.env  versions.yaml
.claude/commands/: fix-e2e.md  site-metadata.md
.github/workflows/: ci.yaml  ci.yml  desktop-artifacts.yaml  docker.yaml  docker.yml  publish-site.yaml  release.yaml  release.yml
backend/: go.mod  go.sum
backend/channelproto/: wire.go
backend/channelwire/: chunkbuffer.go  chunkbuffer_test.go  sendgate.go  sendgate_test.go  wire.go  wire_test.go
backend/hub/: server.go  server_shutdown_test.go  version_handler.go  version_handler_test.go
backend/locallisten/: hub_client.go  locallisten.go  locallisten_test.go  locallisten_unix.go  locallisten_unix_test.go  locallisten_windows.go  locallisten_windows_test.go
backend/solo/: solo.go  solo_integration_test.go  solo_test.go  worker_state_test.go
backend/spautil/: handler.go
backend/tunnel/: channel.go  channel_integration_test.go  channel_send_test.go  channel_test.go  conn.go  conn_test.go  deadline_state.go  latched_err.go  read_credit.go
backend/worker/: runner.go  runner_test.go
cmd/leapmux/: hub.go  main.go  solo.go  standalone.go  worker.go
desktop/: app.go  channel_relay.go  config.go  fulldiskaccess_other.go  go.mod  go.sum  main.go  probe.go  proxy.go  proxy_test.go  singleinstance.go  singleinstance_common.go  singleinstance_other.go  socks5.go  socks5_test.go  solo.go  spa_embed.go  spa_handler.go  tabbing_darwin.go  tabfix_linux.go  tabfix_other.go  tunnel.go  tunnel_test.go  wails.json  webview_log_handler.go  webview_log_handler_test.go
desktop/frontend/: app.js  index.html  style.css
desktop/go/: accept_error_unix.go  accept_error_unix_test.go  accept_error_windows.go  accept_error_windows_test.go  app.go  app_test.go  channel_relay.go  channel_relay_test.go  cli_path_darwin.go  cli_path_darwin_test.go  cli_path_other.go  config.go  drain.go  drain_test.go  editors.go  editors_darwin.go  editors_darwin_test.go  editors_linux.go  editors_linux_test.go  editors_test.go  editors_windows.go  editors_windows_test.go  frame.go  frame_test.go  fulldiskaccess_darwin.go  fulldiskaccess_other.go  go.mod  go.sum  main.go  operation_gate.go  operation_gate_test.go  orgevents_relay.go  orgevents_relay_test.go  pipe_closed_other.go  pipe_closed_windows.go  pipe_closed_windows_test.go  probe.go  probe_test.go  proxy.go  proxy_test.go  (+17 more)
desktop/rust/: Cargo.toml  build.rs  desktop-template.desktop  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
desktop/rust/capabilities/: default.json
desktop/rust/scripts/: create-dmg.sh  generate-dsstore.mjs  generate-icons.mjs  linuxdeploy-wrapper.c  notarize-macos.sh  patch-linuxdeploy.sh  sign-macos.sh
desktop/rust/src/: main.rs  tabfix_linux.rs
desktop/rust/windows/: main.wxs  wix-peruser.wxs
desktop/scripts/: create-dmg.sh  generate-dsstore.mjs  generate-icons.mjs
desktop/spa/: .gitignore
docker/: Dockerfile
docs/cli/: remote.md
frontend/: app.config.ts  eslint.config.ts  package.json  playwright.config.ts  tsconfig.e2e.json  tsconfig.json  vitest.config.ts  vitest.setup.ts
frontend/patches/: vinxi@0.5.11.patch
frontend/public/: manifest.webmanifest
frontend/scripts/: generate-icons.mjs  only-bun.mjs  resolve-task-bin.ts  run-e2e.ts  run-vitest.mjs  run-vitest.sh
frontend/src/: app.tsx  entry-client.tsx  entry-server.tsx
hub/: server.go
internal/config/: config_test.go  providers.go
internal/hub/: frontend.embed  sqlc.yaml
internal/logging/: banner.go
internal/metrics/: metrics_test.go  middleware.go
internal/noise/: fingerprint.go  interop_test.go  noise.go  noise_test.go
scripts/: build-ico.mjs  generate-notice.mjs  sync-generated.mjs  sync-generated.sh  validate-icons.mjs
site/: README.md  go.mod  go.sum  hugo.yaml  wrangler.jsonc
testdata/: channelwire_limits.json  tunnel_bind_addr_conformance.json
worker/: runner.go
(+2892 files in other folders)
