[package]
name = "leapmux-desktop"
version = "0.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }
prost-build = "0.14"

[dependencies]
base64 = "0.22"
prost = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }

[target.'cfg(target_os = "linux")'.dependencies]
# Tauri 2 already pulls these in transitively (it returns
# `gtk::ApplicationWindow` from `WebviewWindow::gtk_window()`).
# We name them explicitly so `tabfix_linux.rs` can install a GTK-level
# Tab key-press handler.
gtk = "0.18"
gdk = "0.18"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_Threading",
] }
